--- a/xxqr/ehlix.css
+++ b/xxqr/ehlix.css
@@ -6,57 +6,41 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
-  background-color: #fff; /* Standard-Hintergrundfarbe */
-  /* transition: background-color 5s ease; /* Übergangseffekt für den Hintergrund über 2 Sekunden */
-  background-repeat: no-repeat; /* Hintergrundwiederholung verhindern */
-  background-size: cover; /* Bild an die Ränder des Bildschirms anpassen, ohne das Seitenverhältnis zu verzerren */
-  background-position: center; /* Bild in die Mitte des Bildschirms positionieren */
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 #spruchContainer {
   display: inline-flex;
   justify-content: center;
   text-align: center;
- /* background: rgba(255, 255, 255, 0.1); /* Glasiger Effekt mit Weiß und Transparenz (0.8) */
- /* border-radius: 10px; /* Abgerundete Ecken für den Container */
- /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Schatten für zusätzlichen Effekt */ 
+  max-width: 90%;
 }
-
 
 #spruch {
   font-family: "Rock Salt", cursive;
   font-weight: 400;
   font-style: normal;
   font-size: 4em;
-  color: #95a398; /* Textfarbe */
-  text-shadow: 5px 5px 5px rgba(0.8, 0.8, 0.8, 0.8); /* Textschatten */
+  color: #95a398;
+  text-shadow: 5px 5px 5px rgba(0.8, 0.8, 0.8, 0.8);
+  word-wrap: break-word;
+  max-width: 80%;
 }
 
-/*
-
-.splash-regular {
-  font-family: "Splash", cursive;
-  font-weight: 400;
-  font-style: normal;
+/* Responsive Anpassungen */
+@media screen and (max-width: 1024px) { /* Tablets */
+  #spruch {
+    font-size: 3em;
+    max-width: 90%;
+  }
 }
 
-
-.windsong-regular {
-  font-family: "WindSong", cursive;
-  font-weight: 400;
-  font-style: normal;
+@media screen and (max-width: 768px) { /* Smartphones */
+  #spruch {
+    font-size: 2em;
+    max-width: 95%;
+  }
 }
-
-.windsong-medium {
-  font-family: "WindSong", cursive;
-  font-weight: 500;
-  font-style: normal;
-}
-
-.rock-salt-regular {
-  font-family: "Rock Salt", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
-*/
