--- a/xxqr/ehlix.css
+++ b/xxqr/ehlix.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=WindSong:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee:wght@400;500&display=swap');
 
 body {
   display: flex;
@@ -20,7 +20,7 @@ body {
 }
 
 #spruch {
-  font-family: "Rock Salt", cursive;
+  font-family: "Handlee", cursive;
   font-weight: 400;
   font-style: normal;
   font-size: 4em;
