--- a/xxqr/ehlix.css
+++ b/xxqr/ehlix.css
@@ -20,7 +20,7 @@ body {
 }
 
 #spruch {
-  font-family: "Handlee", cursive;
+  font-family: "Permanent Marker", cursive;
   font-weight: 400;
   font-style: normal;
   font-size: 4em;
