--- a/xxqr/ehlix.css
+++ b/xxqr/ehlix.css
@@ -25,7 +25,7 @@ body {
   font-style: normal;
   font-size: 4em;
   color: #333; /* Dunkelgrau */
-  text-shadow: 5px 5px 5px rgba(0.8, 0.8, 0.8, 0.8);
+ text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.8); /* Weißer Schatten für Kontrast */
   word-wrap: break-word;
   max-width: 80%;
 }
